fix css display to center, and hidden when content overflows

--- a/client/pages/CalculatorPage/calculatorPage.scss
+++ b/client/pages/CalculatorPage/calculatorPage.scss
@@ -66,7 +66,6 @@
           font-weight: bold;
           padding: 10px;
           .calculator-display {
-            margin-left: 10px;
             overflow: hidden;
             font-family: 'Open Sans Light', Arial, sans-serif;
             width: 100%;
